2016-05-06  Richard Biener  <rguenther@suse.de>

PR middle-end/70931
	* dwarf2out.c (native_encode_initializer): Skip zero-sized fields.

	* gfortran.dg/pr70931.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@235944 138bc75d-0d04-0410-961f-82ee72b054a4